--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "worldbuilding",
+  "name": "fantasyherohy",
   "version": "1.0.0",
-  "description": "CSS compiler for the Worldbuilding system",
+  "description": "CSS compiler for the fantasyhero system",
   "scripts": {
     "css": "gulp css",
     "watch": "gulp",
